--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <div class="logo">
                 <img src="assets/logo.png">
             </div>
-            <nav class="nav">
+            <button class="hamburger" id="hamburger">☰</button>
+            <nav class="nav" id="navbar">
                 <a href="#home" class="nav-link active">Home</a>
                 <a href="#history" class="nav-link">History</a>
                 <a href="#product" class="nav-link">Product</a>
@@ -79,8 +80,6 @@
             </div>
         </div>
     </section>
-
-   
 
     <!-- Footer -->
     <footer class="footer">
