--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>MUGIFUMI</h1>
-                    <p>Mugifumi adalah sebuah produk UMKM yang mengusung konsep toko roti artisan Jepang, dengan fokus utama pada pembuatan shokupan. Roti susu khas Jepang yang terkenal karena teksturnya yang lembut dan rasa manis alami yang unik.</p>
+                    <p>Mugifumi adalah sebuah produk UMKM yang mengusung konsep toko roti artisan Jepang, dengan fokus utama pada pembuatan shokupan, roti susu khas Jepang yang terkenal karena teksturnya yang lembut dan rasa manis alami yang unik.
+</p>
                     <button class="btn-primary">VIEW MORE</button>
                 </div>
             </div>
@@ -62,18 +63,17 @@
                 </div>
                 <div class="about-text">
                     <p>
-                        Roti sebuah daya munajit di antara identitas pendek dari embun pagi. Itu 
-                        Si ingin memberian kimpal lewat sayurana. Ia bukan penbaiat roti 
-                        biasa melainnya adalah sebuah kelaiayan dan berluang sebagai 
-                        sebuah yang di luar jeletikan.
+                        Di sebuah dapur mungil, di antara denting sendok dan embun pagi, 
+                        Ibu Sri Hayati menenun mimpi lewat sepotong roti. Ia bukan pembuat roti biasa tangannya adalah ladang kesabaran, 
+                        dan waktunya adalah adonan yang ia uleni perlahan.
+
                     </p>
                     <p>
-                        Roti yang ia ciptakan bukan sembarang roti. Shokupan Mugifumi lahir 
-                        dari proses penjang—lebih dari lima tahun pencarian rasa yang tak 
-                        hanya unik di lidah, tapi juga terpel di hati. Tak lepas dari keragaman 
-                        bersahabat dengan lupung, dan berluang dengan ria yang sedang 
-                        tak mau menyerang. Tapi seperti intotati yang tak pernah atas 
-                        itu. Si tesu termentu.
+                        Roti yang ia ciptakan bukan sembarang roti. 
+                        Shokupan Mugifumi lahir dari proses panjang—lebih dari lima tahun pencarian rasa yang tak hanya enak di lidah,
+                        tapi juga hangat di hati. Ia belajar dari kegagalan, bersahabat dengan tepung, 
+                        dan berdialog dengan ragi yang kadang tak mau mengembang. 
+                        Tapi seperti matahari yang tak pernah alpa, Ibu Sri terus mencoba.
                     </p>
                     <button class="btn-secondary">LEARN MORE</button>
                 </div>
