--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>MUGIFUMI</h1>
-                    <p>Mugifumi adalah sebuah produk UMKM yang mengusung konsep toko roti artisan Jepang, dengan fokus utama pada pembuatan shokupan, roti susu khas Jepang yang terkenal karena teksturnya yang lembut dan rasa manis alami yang unik.
-</p>
+                    <p>Mugifumi adalah sebuah produk UMKM yang mengusung konsep toko roti artisan Jepang, dengan fokus utama pada pembuatan shokupan. Roti susu khas Jepang yang terkenal karena teksturnya yang lembut dan rasa manis alami yang unik.</p>
                     <button class="btn-primary">VIEW MORE</button>
                 </div>
             </div>
@@ -56,28 +55,217 @@
 
     <!-- About Section -->
     <section id="history" class="about">
-        <div class="container">
-            <div class="about-content">
-                <div class="about-image">
-                    <img src="assets/bread.png" alt="Mugifumi Product">
-                </div>
-                <div class="about-text">
-                    <p>
-                        Di sebuah dapur mungil, di antara denting sendok dan embun pagi, 
-                        Ibu Sri Hayati menenun mimpi lewat sepotong roti. Ia bukan pembuat roti biasa tangannya adalah ladang kesabaran, 
-                        dan waktunya adalah adonan yang ia uleni perlahan.
-
-                    </p>
-                    <p>
-                        Roti yang ia ciptakan bukan sembarang roti. 
-                        Shokupan Mugifumi lahir dari proses panjang—lebih dari lima tahun pencarian rasa yang tak hanya enak di lidah,
-                        tapi juga hangat di hati. Ia belajar dari kegagalan, bersahabat dengan tepung, 
-                        dan berdialog dengan ragi yang kadang tak mau mengembang. 
-                        Tapi seperti matahari yang tak pernah alpa, Ibu Sri terus mencoba.
-                    </p>
-                    <button class="btn-secondary">LEARN MORE</button>
+        <div class="about-top">
+            <div class="container">
+                <div class="about-content">
+                    <div class="about-image">
+                        <img src="assets/bread.png" alt="Mugifumi Product">
+                    </div>
+                    <div class="about-text">
+                        <p>
+                            Di sebuah dapur mungil, di antara denting sendok dan embun pagi, Ibu 
+                            Sri Hayati menaruh mimpi lewat sepotong roti. Ia bukan pembuat roti 
+                            biasa, tangannya adalah ladang kesabaran, dan waktunya adalah 
+                            adonan yang ia uleni perlahan.
+                        </p>
+                        <p>
+                            Roti yang ia ciptakan bukan sembarang roti. Shokupan Mugifumi lahir 
+                            dari proses panjang—lebih dari lima tahun pencarian rasa yang tak 
+                            hanya unik di lidah, tapi juga hangat di hati. Ia berakar dari keragaman, 
+                            bersahabat dengan tepung, dan berdialog dengan ragi yang kadang 
+                            tak mau mendengar. Tapi seperti mukjizat yang tak pernah abai, 
+                            Ibu Sri terus mencoba.
+                        </p>
+                        <button class="btn-secondary">LEARN MORE ></button>
+                    </div>
                 </div>
             </div>
+        </div>
+
+        <div class="title-box">
+            <h2>Ide Kreasi Favorite Ibu Sri</h2>
+        </div>
+
+        <div class="about-bottom">
+            <div class="container">
+                <div class="product-showcase">
+                    <div class="product-card">
+                        <h3>Shokupan With Ice Cream</h3>
+                        <div class="product-image">
+                            <img src="assets/product-icecream.jpg" alt="Shokupan with Ice Cream">
+                        </div>
+                        <div class="rating">
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <h3>Shokupan With Milk</h3>
+                        <div class="product-image">
+                            <img src="assets/product-milk.jpg" alt="Shokupan with Milk">
+                        </div>
+                        <div class="rating">
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star half">★</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <h3>Shokupan With Coffee</h3>
+                        <div class="product-image">
+                            <img src="assets/product-coffee.jpg" alt="Shokupan with Coffee">
+                        </div>
+                        <div class="rating">
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                        </div>
+                    </div>
+
+                    <div class="product-card">
+                        <h3>Shokupan Toast With Strawberry Jam</h3>
+                        <div class="product-image">
+                            <img src="assets/product-strawberry.jpg" alt="Shokupan Toast with Strawberry Jam">
+                        </div>
+                        <div class="rating">
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star">★</span>
+                            <span class="star half">★</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Product Section -->
+    <section id="product" class="products">
+        <div class="top-bar"></div>
+        
+        <div class="container">
+            <div class="product-list">
+                <!-- Product 1 -->
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="assets/milk-hokaido.png" alt="Milk Hokaido">
+                    </div>
+                    <div class="product-info">
+                        <h3>MILK HOKAIDO</h3>
+                        <p class="description">The bread that started it all. Our signature Hokkaido milk shokupan showcases high-quality traditional Japanese flour, carefully selected for its ability to create our cloud-soft texture and that sought-after umami richness.</p>
+                        <p class="ingredients">Komposisi:<br>
+                        Tepung Protein Tinggi, Susu, Gula, Telur,<br>
+                        Garam, dan Butter</p>
+                    </div>
+                </div>
+
+                <!-- Product 2 -->
+                <div class="product-item">
+                    <div class="product-info">
+                        <h3>MATCHA WHITE CHOCOLATE SHOKUPAN</h3>
+                        <p class="description">We've folded pure matcha into our signature shokupan, then weave ribbons of white chocolate throughout the tender dough. Our carefully selected Japanese flour blend creates that distinctive cloud-like texture with the umami notes that MUGIFUMI is known for.</p>
+                        <p class="ingredients">Komposisi:<br>
+                        Tepung Protein Tinggi, Susu, Gula, Telur,<br>
+                        Garam, Pure Matcha Powder, dan White Chocolate</p>
+                    </div>
+                    <div class="product-image">
+                        <img src="assets/matcha-chocolate.png" alt="Matcha White Chocolate Shokupan">
+                    </div>
+                </div>
+
+                <!-- Product 3 -->
+                <div class="product-item">
+                    <div class="product-image">
+                        <img src="assets/sakura-strawberry.png" alt="Sakura Strawberry Anshokupan">
+                    </div>
+                    <div class="product-info">
+                        <h3>SAKURA STRAWBERRY ANSHOKUPAN</h3>
+                        <p class="description">To celebrate spring's arrival, we've created a shokupan that captures the essence of the season. Our Hokkaido milk base features a delightful swirl of natural red bean, fresh Candeo strawberries, and subtle sakura leaf extract.</p>
+                        <p class="ingredients">Komposisi:<br>
+                        Tepung Protein Tinggi, Susu, Gula, Telur,<br>
+                        Garam, Butter, Strawberry, Sakura Leaf, dan Red Bean</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="bottom-image">
+            <img src="assets/bottom-pattern.png" alt="Decorative Pattern">
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="top-bar"></div>
+        
+        <div class="container">
+            <div class="contact-images-container">
+                <div class="contact-images">
+                    <div class="contact-image">
+                        <img src="assets/contact-1.jpg" alt="Mugifumi Bread">
+                    </div>
+                    <div class="contact-image">
+                        <img src="assets/contact-2.jpg" alt="Mugifumi Bread">
+                    </div>
+                    <div class="contact-image">
+                        <img src="assets/contact-3.jpg" alt="Mugifumi Bread">
+                    </div>
+                </div>
+                <div class="contact-overlay">
+                    <div class="contact-header">
+                        <h2>Contact Us</h2>
+                        <p>Kami siap melayani Anda dengan senyum dan kehangatan khas Jepang.</p>
+                        <p>Segera hubungi kami melalui kontak di bawah ini dan rasakan pengalaman roti artisan terbaik dari Mugifumi.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="contact-info-bar">
+                <div class="info-item">
+                    <div class="icon">
+                        <img src="assets/location-icon.png" alt="Location">
+                    </div>
+                    <h3>VISIT US</h3>
+                    <p>Gandaria City<br>
+                    Level 2</p>
+                    <p>Jl. Sultan Iskandar Muda, Gandaria, Kec. Kby. Lama,<br>
+                    Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta<br>
+                    Jakarta 12240</p>
+                </div>
+
+                <div class="info-item">
+                    <div class="icon">
+                        <img src="assets/phone-icon.png" alt="Phone">
+                    </div>
+                    <h3>CALL US</h3>
+                    <p>Tel:</p>
+                    <p>+62123456789</p>
+                </div>
+
+                <div class="info-item">
+                    <div class="icon">
+                        <img src="assets/message-icon.png" alt="Message">
+                    </div>
+                    <h3>CONTACT US</h3>
+                    <p>Message us and let's talk about flavor,<br>
+                    freshness, and your next favorite loaf!</p>
+                    <p class="email">Email:<br>
+                    Office@mugifumi.asia</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="bottom-image">
+            <img src="assets/bottom-pattern.png" alt="Decorative Pattern">
         </div>
     </section>
 
