--- a/product.html
+++ b/product.html
@@ -19,7 +19,9 @@
             <div class="logo">
                 <img src="assets/logo.png">
             </div>
-            <button class="hamburger" id="hamburger">☰</button>
+            <button class="hamburger" id="hamburger">
+                <img src="assets/5.png" alt="Menu">
+            </button>
             <nav class="nav" id="navbar">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="history.html" class="nav-link">History</a>
